kubernetes/overlays/dev/collab-listener.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collab-listener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collab-listener
  template:
    metadata:
      labels:
        app: collab-listener
    spec:
      containers:
      - name: collab-listener
        image: slaclab/explgbk-collab-listener:20200421.0
        imagePullPolicy: Always
