kubernetes/overlays/dev/database-patches.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  updateStrategy:
    type: RollingUpdate
  replicas: 1
