kubernetes/overlays/dev/logbook-patches.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: explgbk
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: explgbk
