kubernetes/overlays/dev/storage-patches.yaml
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 50Gi
      storageClassName: cryoem-logbook-dev--mongo
