kubernetes/overlays/dev/endpoint-patches.yaml

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: www
spec:
  rules:
  - host: cryoem-logbook-dev.slac.stanford.edu
    http:
      paths:
      - path: /
        backend:
          serviceName: auth
          servicePort: 443
