kubernetes/overlays/dev/ingress.yaml
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: www
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
    - host: cryoem-logbook-dev.slac.stanford.edu
      http:
        paths:
        - path: /
          backend:
            serviceName: auth
            servicePort: 443
